Some corrections to the way fonts are served
Made the text fonts use regular @fontface declarations, no more base64 encoding. File size was too large. Fixed a path issue with the icon font for EOT file.

--- a/static/sass/style.scss
+++ b/static/sass/style.scss
@@ -263,14 +263,14 @@ input[type=reset], button.secondaryAction {
 }
 
 b, strong {
-    font-weight: normal; 
-    font-style: normal; 
+    //font-weight: normal; 
+    //font-style: normal; 
     font-family: $default-font-bold; 
 }
 
 i, em {
-    font-weight: normal; 
-    font-style: normal; 
+    //font-weight: normal; 
+    //font-style: normal; 
     font-family: $default-font-italic; 
 }
 
